# inference-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: locustfile.py
configs/: ab_tests.yaml  routes.yaml  tenants.yaml
docs/: app.js  index.html  styles.css
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: gateway.json
src/gateway/: __init__.py  app.py  cli.py  config.py
src/gateway/api/: routes.py
src/gateway/backends/: __init__.py  base.py  ollama.py  openai_compatible.py  sglang.py  vllm.py
src/gateway/health/: __init__.py  checker.py  circuit_breaker.py
src/gateway/middleware/: __init__.py  auth.py  logging.py  metrics.py  rate_limit.py  request_id.py
src/gateway/models/: __init__.py  config_models.py  request.py  response.py
src/gateway/routing/: __init__.py  ab_test.py  canary.py  fallback.py  load_balancer.py  router.py
src/gateway/streaming/: sse.py
tests/: conftest.py  test_api_routes.py  test_app.py  test_auth.py  test_backends.py  test_backends_extra.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_health_extra.py  test_integration.py  test_middleware_extra.py  test_rate_limit.py  test_routing.py  test_routing_extra.py  test_streaming.py  test_streaming_extra.py
